--- a/style/components/_about-section.scss
+++ b/style/components/_about-section.scss
@@ -74,7 +74,10 @@ section#about{
                 line-height: 32px;
                 margin-bottom: 40px;
             }
-        
+            @media only screen and (max-width: 320px) {
+                font-size: 25px;
+                line-height: 30px;
+            }
     }
     p{
         line-height: 30px;
@@ -102,7 +105,11 @@ section#about{
         @media only screen and (max-width: 500px) {
             width: 100%;
             font-size: 18px;
-            line-height: 30px;
+            line-height: 28px;
+        }
+        @media only screen and (max-width: 320px) {
+            font-size: 16px;
+            line-height: 26px;
         }
     }
 }
