--- a/style/components/_hero-section.scss
+++ b/style/components/_hero-section.scss
@@ -87,6 +87,10 @@ main{
                 font-size: 26px;
                 line-height: 32px;
             }
+            @media only screen and (max-width: 320px) {
+                font-size: 25px;
+                line-height: 30px;
+            }
             
             
         }
@@ -105,7 +109,11 @@ main{
             @media only screen and (max-width: 500px) {
                 width: 100%;
                 font-size: 18px;
-                line-height: 30px;
+                line-height: 28px;
+            }
+            @media only screen and (max-width: 320px) {
+                font-size: 16px;
+                line-height: 26px;
             }
         }
 
