--- a/style/layouts/_footer.scss
+++ b/style/layouts/_footer.scss
@@ -78,11 +78,16 @@ footer#contact.big-screen {
           }
            @media only screen and (max-width: 600px) {
             width: 100%;
+            margin-bottom: 36px;
           }
           @media only screen and (max-width: 360px) {
             font-size: 26px;
             line-height: 32px;
         }
+        @media only screen and (max-width: 320px) {
+          font-size: 25px;
+          line-height: 30px;
+      }
         }
 
         p{
@@ -96,6 +101,15 @@ footer#contact.big-screen {
            @media only screen and (max-width: 600px) {
             width: 100%;
           }
+          @media only screen and (max-width: 500px) {
+            width: 100%;
+            font-size: 18px;
+            line-height: 28px;
+        }
+        @media only screen and (max-width: 320px) {
+          font-size: 16px;
+          line-height: 26px;
+      }
       }
       }
 
@@ -181,6 +195,9 @@ footer#contact.big-screen {
                 &:not(:last-child){
                   margin-bottom: 10px;
                 }
+                @media only screen and (max-width: 500px) {
+                  font-size: 14px;
+                }
               }
             }
 
@@ -194,6 +211,9 @@ footer#contact.big-screen {
 
                 &:not(:last-child){
                   margin-bottom: 10px;
+                }
+                @media only screen and (max-width: 500px) {
+                  font-size: 14px;
                 }
               }
             }
@@ -236,6 +256,9 @@ footer#contact.big-screen {
         p{
           font-size: $paragraph-font-size-3;
           opacity: .5;
+          @media only screen and (max-width: 500px) {
+            font-size: 12px;
+          }
         }
       }
     }
