--- a/style/components/_hero-section.scss
+++ b/style/components/_hero-section.scss
@@ -110,6 +110,7 @@ main{
                 width: 100%;
                 font-size: 18px;
                 line-height: 28px;
+                font-weight: 400;
             }
             @media only screen and (max-width: 320px) {
                 font-size: 16px;
