--- a/style/components/_about-section.scss
+++ b/style/components/_about-section.scss
@@ -106,6 +106,7 @@ section#about{
             width: 100%;
             font-size: 18px;
             line-height: 28px;
+            font-weight: 400;
         }
         @media only screen and (max-width: 320px) {
             font-size: 16px;
