--- a/style/components/_services-section.scss
+++ b/style/components/_services-section.scss
@@ -178,8 +178,8 @@ section#services{
                 height: 140px;
             }
             @media only screen and (max-width: 500px) {
-                width: 100%;
-                height: auto;
+                width: 264px;
+                height: 264px;
                 margin-right: 0px;
             }
            
