--- a/style/pages/home.css
+++ b/style/pages/home.css
@@ -942,6 +942,12 @@ footer#contact.big-screen article.mid {
   }
 }
 
+@media only screen and (max-width: 500px) {
+  footer#contact.big-screen article.mid {
+    height: 250px;
+  }
+}
+
 footer#contact.big-screen article.mid .logo {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1884,8 +1890,8 @@ main section#services .services-container article.service img.service__pattern {
 
 @media only screen and (max-width: 500px) {
   main section#services .services-container article.service img.service__pattern {
-    width: 100%;
-    height: auto;
+    width: 264px;
+    height: 264px;
     margin-right: 0px;
   }
 }
