--- a/style/components/_team-section.scss
+++ b/style/components/_team-section.scss
@@ -108,10 +108,10 @@ main{
             //     width: 240px;
             // }
     
-            &:hover{
-                transform: translateY(4px);
-                box-shadow: 1px 4px 4px 1px rgba(57, 19, 184, 0.05);
-            }
+            // &:hover{
+            //     transform: translateY(4px);
+            //     box-shadow: 1px 4px 4px 1px rgba(57, 19, 184, 0.05);
+            // }
     
             img.member__image {
                 width: 112px;
