--- a/style/layouts/_header.scss
+++ b/style/layouts/_header.scss
@@ -146,7 +146,7 @@ header.big-screen {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    background-color: $primary-background;
+    background-color: $secondary-background;
     padding:0px 48px 0 310px;
     // transition: all .7s ease;
     transition: all .7s cubic-bezier(0.77,-0.01, 0.59, 0.87);
