--- a/style/layouts/_header.scss
+++ b/style/layouts/_header.scss
@@ -265,10 +265,10 @@ header.big-screen {
               // display: block;
               opacity: 1;
             }
-            &.opened:active::before{
-              // display: block;
-              opacity: 1;
-            }
+            // &.opened:active::before{
+            //   // display: block;
+            //   opacity: 1;
+            // }
 
             &.opened:hover a{
               transition: all .5s ease; 
@@ -284,20 +284,20 @@ header.big-screen {
                 margin-left: 30px;
               }             
             }
-            &.opened:active a{
-              transition: all .5s ease; 
-              color: $main-blue;
-              margin-left: 60px;
+            // &.opened:active a{
+            //   transition: all .5s ease; 
+            //   color: $main-blue;
+            //   margin-left: 60px;
 
-              @media only screen and (max-width: 1300px) {
-                transition: all .4s ease; 
-                margin-left: 40px;
-              }
-              @media only screen and (max-width: 1000px) {
-                transition: all .3s ease; 
-                margin-left: 30px;
-              }             
-            }
+            //   @media only screen and (max-width: 1300px) {
+            //     transition: all .4s ease; 
+            //     margin-left: 40px;
+            //   }
+            //   @media only screen and (max-width: 1000px) {
+            //     transition: all .3s ease; 
+            //     margin-left: 30px;
+            //   }             
+            // }
           }
         }
         &.contact{
