--- a/style/components/_team-section.scss
+++ b/style/components/_team-section.scss
@@ -220,7 +220,20 @@ main{
             //     transform: translateY(4px);
             //     box-shadow: 1px 4px 4px 1px rgba(57, 19, 184, 0.05);
             // }
-    
+
+
+            @media only screen and (max-width: 450px) {
+                width: 300px;
+                
+            }
+            @media only screen and (max-width: 360px) {
+                width: 260px;
+                
+            }
+            @media only screen and (max-width: 320px) {
+                width: 230px;
+                
+            }
             img.member__image {
                 width: 100%;
                 height: auto;
