--- a/style/components/_services-section.scss
+++ b/style/components/_services-section.scss
@@ -108,11 +108,16 @@ section#services{
             grid-template-rows: repeat(4, auto);
 
         }
-        // @media only screen and (max-width: 440px) {
-           
-        //     grid-template-columns: 240px;
+        @media only screen and (max-width: 450px) {
+            grid-template-columns: 300px;
+        }
+        @media only screen and (max-width: 360px) {
+            grid-template-columns: 260px;
+        }
+        @media only screen and (max-width: 320px) {
+            grid-template-columns: 230px;
+        }
 
-        // }
     article.service{
         width: 500px;
         height: 100%;
@@ -163,7 +168,18 @@ section#services{
         // @media only screen and (max-width: 440px) {
         //     width: 240px;
         // }
-
+        @media only screen and (max-width: 450px) {
+            width: 300px;
+            
+        }
+        @media only screen and (max-width: 360px) {
+            width: 260px;
+            
+        }
+        @media only screen and (max-width: 320px) {
+            width: 230px;
+            
+        }
         img.service__pattern {
             width: 168px;
             height: 100%;
