--- a/style/pages/home.css
+++ b/style/pages/home.css
@@ -748,19 +748,19 @@ footer#contact.big-screen {
 
 @media only screen and (max-width: 1100px) {
   footer#contact.big-screen {
-    padding: 20px 60px;
+    padding: 60px 60px 20px 60px;
   }
 }
 
 @media only screen and (max-width: 700px) {
   footer#contact.big-screen {
-    padding: 20px 40px;
+    padding: 60px 40px 20px 40px;
   }
 }
 
 @media only screen and (max-width: 400px) {
   footer#contact.big-screen {
-    padding: 20px 30px;
+    padding: 60px 30px 20px 30px;
   }
 }
 
@@ -790,6 +790,12 @@ footer#contact.big-screen article.upper {
           align-items: center;
   width: 100%;
   margin-bottom: 100px;
+}
+
+@media only screen and (max-width: 700px) {
+  footer#contact.big-screen article.upper {
+    margin-bottom: 90px;
+  }
 }
 
 @media only screen and (max-width: 500px) {
@@ -942,7 +948,7 @@ footer#contact.big-screen article.mid {
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 700px) {
   footer#contact.big-screen article.mid {
     height: 250px;
   }
